force-app/main/default/objects/BMCServiceDesk__SYSUsersPortletsConfig__c/BMCServiceDesk__SYSUsersPortletsConfig__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the details of users and their portlets.</description>
    <label>Users Portlets Config</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSUsersPortletsConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>