force-app/main/default/objects/BMCServiceDesk__SYSUsersPortletsConfig__c/fields/BMCServiceDesk__FKUser__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKStaff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SYSUsersPortlets</relationshipName>
    <type>Lookup</type>
</CustomField>