force-app/main/default/objects/BMCServiceDesk__SYSUsersPortletsConfig__c/fields/BMCServiceDesk__showPortlet__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__showPortlet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Portlet</label>
    <type>Checkbox</type>
</CustomField>